[package]
name = "lundakarnevalen-train-api"
version = "0.1.0"
edition = "2021"
authors = ["cascading-jox <cascading-jox@gmail.com>"]
license = "Apache-2.0"

[features]
test-position = []

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
rustls = "0.20.4"
rustls-pemfile = "0.3"
actix-web-httpauth = "0.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

env_logger = "0.9"
log = "0.4"
